# fox

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
config/: config.toml
crates/fox-cli/: Cargo.toml
crates/fox-cli/src/: main.rs
crates/fox-core/: Cargo.toml
crates/fox-core/src/: accessibility.rs  chrome.rs  extract.rs  fetch.rs  lib.rs  markdown.rs
crates/fox-tui/: Cargo.toml
crates/fox-tui/src/: app.rs  config.rs  history.rs  lib.rs  tabs.rs  ui.rs  vim.rs
