[workspace]
resolver = "2"
members = [
    "crates/fox-core",
    "crates/fox-tui",
    "crates/fox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fox Contributors"]
license = "MIT"
repository = "https://github.com/fox/fox"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["cookies", "json", "stream"] }

# Headless browser
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }

# HTML parsing
scraper = "0.18"
html5ever = "0.26"

# TUI
ratatui = "0.25"
crossterm = "0.27"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
directories = "5.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.1"
textwrap = "0.16"
arboard = "3.3"
regex = "1.10"
